--- a/.gitignore
+++ b/.gitignore
@@ -29,14 +29,14 @@ yarn-error.log*
 
 # local env files
 # .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 # vercel
-.vercel
-.env*
-.env_*.*
+# .vercel
+# .env*
+# .env_*.*
 
 payloadEncryptDecrypt.js
 
